--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ Table Of Contents:
 Colors:
 - Backgrounds, navbar - black #000000
 - Backgrounds - light gray #f5f5f5
-- Buttons, icons - red #c2337b
+- Buttons, icons - red #1ff51b
 - Headings text - black #000000
 - Body text - dark gray #6b747b
 ******************************************/
@@ -137,7 +137,7 @@ a:hover {
 }
 
 .red {
-	color: #c2337b;
+	color: #1ff51b;
 }
 
 .bg-gray {
@@ -151,15 +151,15 @@ a:hover {
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
 	border: none;
-	background-color: #c2337b;
+	background-color: #1ff51b;
 }
 
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #c2337b;
+	border: 1px solid #1ff51b;
 	border-radius: 32px;
-	background-color: #c2337b;
+	background-color: #1ff51b;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -170,16 +170,16 @@ a:hover {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #c2337b; /* needs to stay here because of the color property of a tag */
+	color: #1ff51b; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #c2337b;
+	border: 1px solid #1ff51b;
 	border-radius: 32px;
-	background-color: #c2337b;
+	background-color: #1ff51b;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -190,7 +190,7 @@ a:hover {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #c2337b; /* needs to stay here because of the color property of a tag */
+	color: #1ff51b; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
@@ -359,9 +359,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.25rem;
-	border: 1px solid #c2337b;
+	border: 1px solid #1ff51b;
 	border-radius: 32px;
-	background-color: #c2337b;
+	background-color: #1ff51b;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -542,7 +542,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack-2x {
-	color: #c2337b;
+	color: #1ff51b;
 	transition: all 0.2s ease;
 }
 
@@ -556,7 +556,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack:hover .fa-stack-1x {
-	color: #c2337b;
+	color: #1ff51b;
 }
 
 .navbar .navbar-toggler {
@@ -578,6 +578,7 @@ input[type='checkbox'] {
 
 .header .image-container {
 	margin-bottom: 5rem;
+	padding-bottom: 100px;
 }
 
 .header .text-container {
@@ -597,7 +598,7 @@ input[type='checkbox'] {
 .header .services {
 	padding-top: 4.5rem;
 	padding-bottom: 0.375rem;
-	background: linear-gradient(to bottom right, #4b00d7, #fa4c50);
+	background: linear-gradient(to bottom right, #8044f0, #52fa4c);
 }
 
 .header .card {
@@ -713,7 +714,7 @@ input[type='checkbox'] {
 	margin-bottom: 1rem;
 	margin-left: 0;
 	border: none;
-	background-color: #c2337b;
+	background-color: #1ff51b;
 }
 
 .lightbox-basic h4 {
@@ -726,7 +727,7 @@ input[type='checkbox'] {
 }
 
 .lightbox-basic .list-unstyled .fas {
-	color: #c2337b;
+	color: #1ff51b;
 	font-size: 0.875rem;
 	line-height: 1.75rem;
 }
@@ -750,7 +751,7 @@ input[type='checkbox'] {
 }
 
 .lightbox-basic .btn-solid-reg.mfp-close:hover {
-	color: #c2337b;
+	color: #1ff51b;
 }
 /* end of action Button */
 
@@ -942,7 +943,7 @@ input[type='checkbox'] {
 .basic-7 {
 	padding-top: 9rem;
 	padding-bottom: 9rem;
-	background: linear-gradient(to bottom right, #4b00d7, #fa4c50);
+	background: linear-gradient(to bottom right,  #8044f0, #52fa4c);
 	text-align: center;
 }
 
@@ -954,7 +955,7 @@ input[type='checkbox'] {
 .basic-7 .btn-solid-lg {
 	border-color: #ffffff;
 	background-color: #ffffff;
-	color: #c2337b;
+	color: #1ff51b;
 }
 
 .basic-7 .btn-solid-lg:hover {
@@ -1071,7 +1072,7 @@ input[type='checkbox'] {
 }
 
 .footer .footer-col.third .fa-stack:hover .fa-stack-2x {
-    color: #c2337b;
+    color: #1ff51b;
 }
 
 .footer .footer-col.third .fa-stack:hover .fa-stack-1x {
@@ -1113,7 +1114,7 @@ a.back-to-top {
 }
 
 a:hover.back-to-top {
-	background-color: #c2337b;
+	background-color: #1ff51b;
 }
 
 
@@ -1155,7 +1156,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-1 .card .fa-stack-2x {
-	color: #c2337b;
+	color: #1ff51b;
 }
 
 .ex-cards-1 .card .fa-stack-1x {
