--- a/css/styles.css
+++ b/css/styles.css
@@ -598,7 +598,7 @@ input[type='checkbox'] {
 .header .services {
 	padding-top: 4.5rem;
 	padding-bottom: 0.375rem;
-	background: linear-gradient(to bottom right, #8044f0, #52fa4c);
+	background: linear-gradient(to bottom right, #6919fd, #44fa3e);
 }
 
 .header .card {
@@ -943,7 +943,7 @@ input[type='checkbox'] {
 .basic-7 {
 	padding-top: 9rem;
 	padding-bottom: 9rem;
-	background: linear-gradient(to bottom right,  #8044f0, #52fa4c);
+	background: linear-gradient(to bottom right,  #6919fd, #44fa3e);
 	text-align: center;
 }
 
