--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,7 @@ input[type='checkbox'] {
 .navbar .navbar-brand {
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
+	font-family:cursive;
 }
 
 .navbar .logo-image img {
@@ -577,7 +578,7 @@ input[type='checkbox'] {
 }
 
 .header .image-container {
-	margin-bottom: 5rem;
+	margin-bottom: 0rem;
 	padding-bottom: 100px;
 }
 
